# Wasalni_mini

./: .gitignore  CMakeLists.txt  Colors.cpp  ConsoleInput.h  ConsoleOutput.cpp  ConsoleOutput.h  FileHandling.cpp  FileHandling.h  Graph.cpp  Graph.h  StartMenu.cpp  StartMenu.h  Validation.cpp  Validation.h  Wasalni_V1.0.sln  Wasalni_V1.0.vcxproj  Wasalni_V1.0.vcxproj.filters  edge.cpp  edge.h  main.cpp  shortestPath.cpp  shortestPath.h
graphs/: Egypt.txt
x64/Debug/: Wasalni_V1.0.exe.recipe  Wasalni_V1.0.ilk  Wasalni_V1.0.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Wasalni_V1.0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Wasalni_V1.0.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
